# finner

./: .travis.yml  Makefile.am  README.md  configure.ac  index.md
_layouts/: project.html
build-aux/: Makefile.am  cccc.c  phash.c
snap/: snapcraft.yaml
src/: Makefile.am  amt.c  amt.h  bidder.c  bidder.h  ccy-cc.ccl  ccy.c  ccy.h  ccy.rl  ccysym.c  ccysym.h  ccysym.rl  cfi.c  collector.c  collector.h  coru.h  cusip.c  cusip.h  date.c  date.h  datex.c  datex.h  figi.c  figi.h  finner.c  finner.h  finner.rl  finner.yuck  fxpair-cc.ccl  fxpair.c  fxpair.h  gics.c  isin-cc.ccl  isin.c  isin.h  iso4217.c  iso4217.h  iso4217.xsl  lei.c  lei.h  (+17 more)
test/: Makefile.am  amt_01.clit  amt_01.txt  ccysym_01.clit  ccysym_01.txt  cfi_test_01.clit  cfi_test_01.txt  cftc_test_01.clit  cftc_test_01.txt  cftc_test_02.clit  date_01.clit  date_01.txt  nl_01.clit  nl_02.clit  wkn_test_01.clit  wkn_test_01.txt  wkn_test_02.clit
